<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antrobot_ros</name>
  <version>2.0.0</version>
  <description>This package provides ROS2 nodes and interfaces to control the Antrobot.</description>
  <maintainer email="dan_marius.novischi@upb.ro">Dan Novischi</maintainer>
  <license>LGPL-3.0-only</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>python3-smbus2</depend>
  <depend>rclpy</depend> 
  <depend>launch</depend>  
  <depend>ros2launch</depend>
  <depend>rplidar_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

  <!-- Camera and remote viewing dependencies -->
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>nav2_msgs</depend>
  
  <!-- Nav2 Navigation Stack Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  
  <!-- DWB Controller Dependencies -->
  <depend>dwb_core</depend>
  <depend>dwb_plugins</depend>
  <depend>dwb_critics</depend>
  
  <!-- Additional Nav2 Components -->
  <depend>nav2_common</depend>
  <depend>nav2_theta_star_planner</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_straightline_planner</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_constrained_smoother</depend>
  <depend>nav2_mppi_controller</depend>
  
  <!-- Behavior Tree Dependencies -->
  <depend>behaviortree_cpp_v3</depend>
  <depend>groot</depend>
  
  <!-- Additional Costmap Plugins -->
  <depend>nav2_rviz_plugins</depend>
  <!-- <depend>nav2_gradient_costmap_plugin</depend> -->
  <depend>nav2_voxel_grid</depend>
  
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- Odometry evaluation dependencies -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  
  <exec_depend>xterm</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
